Argocd/http-service/Argocd-Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000

      containers:
      - name: server
        image: frontend:1.0.0
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
        readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-readiness-probe"
        livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: frontend-vr # Trỏ đúng tên VirtualService đã tạo ở trên
            routes:
            - primary-route # Khớp với tên "name: primary-route" trong VirtualService
          destinationRule:
            name: frontend-dr # Trỏ đúng tên DestinationRule đã tạo ở trên
            canarySubsetName: canary # Tên của subset nhận bản cập nhật mới
            stableSubsetName: stable # Tên của subset giữ bản chạy ổn định
      # Các bước tăng % Traffic dần dần (Canary Steps)s
      steps:
      - setWeight: 10
      - pause: {duration: 60s}

      - setWeight: 30
      - pause: {duration: 60s}

      - setWeight: 50
      - pause: {duration: 60s}

      - setWeight: 70
      - pause: {duration: 60s}

      - setWeight: 90
      - pause: {duration: 2m}

      - setWeight: 100

      analysis:
        templates:
        - templateName: frontend-success-rate
        args:
        - name: service-name
          value: frontend
