Argocd/http-service/DestinationRules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: frontend-dr
spec:
  host: frontend

  trafficPolicy:

    loadBalancer:
      simple: LEAST_REQUEST

    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 5s

      http:
        http1MaxPendingRequests: 500
        maxRequestsPerConnection: 100
        idleTimeout: 30s
      
      # http: # (for rgpc) 
      #   http2MaxRequests: 500
      #   idleTimeout: 30s

    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50

  subsets:

    - name: stable
      labels:
        rollouts-pod-template-hash: stable

    - name: canary
      labels:
        rollouts-pod-template-hash: canary
