Argocd/http-service/VirtualService.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: checkoutservice-vs

spec:

  hosts:
    - checkoutservice

  http:

    - name: primary-route

      timeout: 5s

      retries:
        attempts: 3
        perTryTimeout: 2s

        retryOn: >
          gateway-error,
          connect-failure,
          refused-stream,
          unavailable,
          reset

      route:

        - destination:
            host: checkoutservice
            subset: stable
          weight: 100

        - destination:
            host: checkoutservice
            subset: canary
          weight: 0
